# noema-atlas

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  MEMORY.md  README.md  SECURITY.md  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance_regression.yml
.github/workflows/: ci.yml  codeql.yml  release-macos-manual.yml  release-studio.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  manifestcmd.rs  ui.html  ui.rs  updatecmd.rs
crates/core/: Cargo.toml
crates/core/examples/: readme_dump.rs
crates/core/src/: announce_auth.rs  cas.rs  db.rs  engine.rs  error.rs  hash.rs  hf.rs  identity.rs  inspect.rs  iroh_node.rs  lib.rs  manifest.rs  paths.rs  planner.rs  platform.rs  policy.rs  readme.rs  secret.rs  share.rs  sign.rs  tracker.rs  transfer.rs  transport.rs  update.rs  util.rs  verify.rs
crates/core/tests/: bittorrent_share.rs  gated_no_bittorrent_seed.rs  integration.rs  iroh_share.rs
crates/core/tests/common/: mod.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs  readme_ui.rs  transport_ui.rs  updater.rs
crates/mobile-ffi/: Cargo.toml
crates/mobile-ffi/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: landing.html  main.rs
crates/studio/: .gitignore  Cargo.toml  README.md  tauri.conf.json
crates/studio/capabilities/: default.json
crates/studio/icons/: icon.icns
crates/studio/src/: commands.rs  main.rs  settings.rs
crates/studio/ui/: index.html  package-lock.json  package.json  vite.config.js
crates/studio/ui/src/: App.svelte  app.css
crates/studio/ui/src/lib/: Readme.svelte  ReadmeSpans.svelte  RouteDetail.svelte  ShareComposer.svelte  Sidebar.svelte  api.js  format.js  receipts.js
crates/studio/ui/src/lib/views/: Discover.svelte  Explore.svelte  Library.svelte  Settings.svelte  Transfers.svelte
docs/: architecture.md  manifest-spec.md  mobile.md  releasing.md  roadmap.md  threat-model.md
scripts/: bundle-linux.sh  bundle-macos.sh  bundle-studio.sh  bundle-windows.ps1  release-manifest.spec.example.json
scripts/windows/: installer.nsi
