[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/registry",
    "crates/desktop",
]
exclude = ["crates/studio", "vendor/librqbit"]

[workspace.package]
version = "0.2.0-alpha.3"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Noema Atlas contributors"]
repository = "https://github.com/noemaai-labs/noema-atlas"
description = "Verified multi-source distribution for local LLM weights"

[workspace.dependencies]
noema-core = { path = "crates/core" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

blake3 = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
base64 = "0.22"
semver = "1"

rusqlite = { version = "0.32", features = ["bundled"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "net", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2", "gzip", "socks"] }
futures-util = "0.3"
bytes = "1"
url = "2"
async-trait = "0.1"

thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

reflink-copy = "0.1"

tempfile = "3"

# Vendored, locally-patched librqbit. The upstream 9.0.0-rc.0 public API does not
# expose two things Atlas needs: a sequential (in-order piece) download mode, and
# the remote peer's peer_id (for the peer-list "client" column). The patch in
# vendor/librqbit adds both, surgically. Keep version == upstream so the `=9.0.0-rc.0`
# requirement in crates/core still resolves; re-apply on any librqbit upgrade.
[patch.crates-io]
librqbit = { path = "vendor/librqbit" }
