[package]
name = "noema-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core engine for Noema Atlas: hashing, manifests, content-addressed cache, verification, source adapters."

[lib]
name = "noema_core"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["http", "huggingface", "os-keystore"]
http = ["dep:reqwest", "dep:url"]
huggingface = ["http"]
iroh = ["dep:iroh", "dep:iroh-blobs", "dep:async-channel", "dep:anyhow", "dep:iroh-io", "dep:bao-tree"]
bittorrent = ["dep:librqbit"]
os-keystore = ["dep:keyring"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true

blake3.workspace = true
sha2.workspace = true
sha1 = "0.10"
ed25519-dalek.workspace = true
rand_core.workspace = true
hex.workspace = true
base64.workspace = true
semver.workspace = true

rusqlite.workspace = true

tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true
bytes.workspace = true
reqwest = { workspace = true, optional = true }
url = { workspace = true, optional = true }

thiserror.workspace = true
tracing.workspace = true
time.workspace = true
# Local wall-clock for the time-of-day bandwidth scheduler. `time`'s now_local() is
# unreliable on worker threads (returns Err on Linux); chrono::Local is safe there.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reflink-copy.workspace = true
# Cross-platform free-disk-space query, used to bound an unknown-size download to
# what the filesystem can actually hold (rather than a guessed byte ceiling).
fs4 = { version = "0.13", default-features = false, features = ["sync"] }

keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native"], optional = true }

iroh = { version = "0.28", optional = true }
iroh-blobs = { version = "0.28", optional = true }
# Pulled in transitively by iroh-blobs 0.28; pinned here so the multi-peer striped
# fetcher can drive the low-level get FSM (bao-tree chunk ranges) and write verified
# ranges to disk (iroh-io). Versions must match what iroh-blobs 0.28 resolves to.
iroh-io = { version = "0.6", optional = true }
bao-tree = { version = "0.13", optional = true }
async-channel = { version = "2", optional = true }
anyhow = { workspace = true, optional = true }

# Optional BitTorrent source adapter (pulls a full swarm/DHT stack; off by
# default, like `iroh`). Pure-Rust librqbit (ikatson/rqbit);
# `rust-tls` selects the rustls + ring-sha1 backends to honor Atlas's no-system-
# OpenSSL rule, and we skip librqbit's HTTP API / web UI / postgres extras.
librqbit = { version = "=9.0.0-rc.0", optional = true, default-features = false, features = ["rust-tls"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
anyhow.workspace = true
axum = "0.7"
