[package]
name = "noema-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Native, low-RAM desktop GUI for Noema Atlas (egui — no webview, no HTML)."

[[bin]]
name = "noema-desktop"
path = "src/main.rs"

[dependencies]
noema-core = { workspace = true, features = ["iroh", "bittorrent"] }
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Auto-update: fetch the signed manifest + the platform asset (proxy-aware, rustls),
# hash-verify it, and self-replace the running binary/bundle.
reqwest.workspace = true
futures-util.workspace = true
sha2.workspace = true
hex.workspace = true
self-replace = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = { version = "0.14", default-features = false, features = ["gtk3"] }

eframe = { version = "0.28", default-features = false, features = [
    "glow",
    "default_fonts",
    "x11",
    "wayland",
] }
