[package]
name = "noema-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Manifest publication and publisher-key metadata service for Noema Atlas."

[[bin]]
name = "noema-registry"
path = "src/main.rs"

[dependencies]
noema-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.8"
clap.workspace = true
