[workspace]

[package]
name = "noema-studio"
version = "0.2.0-alpha.2"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Noema Atlas contributors"]
repository = "https://github.com/noemaai-labs/noema-atlas"
description = "Noema Atlas Studio — opt-in polished desktop UI (Tauri + Svelte)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
noema-core = { path = "../core", features = ["iroh", "bittorrent"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Auto-update: the official Tauri updater (minisign-verified) + process (relaunch).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["sync"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

# Studio is its own workspace, so it needs the same vendored-librqbit patch as the
# root workspace (see ../../Cargo.toml). Path is relative to this manifest.
[patch.crates-io]
librqbit = { path = "../../vendor/librqbit" }
